--- a/.github/workflows/stitch.yml
+++ b/.github/workflows/stitch.yml
@@ -1,4 +1,4 @@
-name: Stitch video from Google Drive (by IDs)
+name: Stitch video from Google Drive (by IDs, 256MiB chunks + DNS/hosts tweaks)
 
 on:
   workflow_dispatch:
@@ -21,12 +21,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 350
     steps:
-      - name: Install ffmpeg and rclone
+      - name: Install ffmpeg, rclone, dnsutils
         shell: bash
         run: |
           set -e
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y ffmpeg dnsutils
           curl -fsSL https://rclone.org/install.sh | sudo bash
 
       - name: Configure rclone with Service Account
@@ -43,6 +43,41 @@ jobs:
           scope = drive
           service_account_file = ./sa.json
           EOF
+
+      - name: Network tweaks (force DNS + optional hosts pinning)
+        shell: bash
+        env:
+          # cambia a "false" si no quieres tocar /etc/hosts
+          PIN_HOSTS: "true"
+        run: |
+          set -e
+          echo "Forzando resolv.conf a 1.1.1.1 / 9.9.9.9 / 8.8.8.8"
+          sudo bash -c 'cat >/etc/resolv.conf <<EOF
+nameserver 1.1.1.1
+nameserver 9.9.9.9
+nameserver 8.8.8.8
+options attempts:2 timeout:2
+EOF'
+          cat /etc/resolv.conf
+
+          if [ "$PIN_HOSTS" = "true" ]; then
+            echo "Pinneando /etc/hosts para googleapis (puedes desactivar con PIN_HOSTS=false)"
+            DNS_SERVERS=("1.1.1.1" "9.9.9.9" "8.8.8.8")
+            HOSTS=("www.googleapis.com" "oauth2.googleapis.com")
+            for host in "${HOSTS[@]}"; do
+              # recoge A records desde varios resolvers y elige uno al azar
+              IP_LIST=$(for s in "${DNS_SERVERS[@]}"; do dig +short A "$host" @"$s"; done | sort -u)
+              IP=$(printf "%s\n" "$IP_LIST" | shuf -n1)
+              if [ -n "$IP" ]; then
+                echo " -> $host -> $IP"
+                # elimina líneas previas del host por si reintentas
+                sudo sed -i.bak "/[[:space:]]$host$/d" /etc/hosts
+                echo "$IP $host" | sudo tee -a /etc/hosts >/dev/null
+              fi
+            done
+            echo "Comprobación /etc/hosts:"
+            tail -n +1 /etc/hosts
+          fi
 
       - name: Download by file IDs (copyid)
         shell: bash
@@ -69,19 +104,14 @@ jobs:
           A_CODEC=$(ffprobe -v error -select_streams a:0 -show_entries stream=codec_name -of csv=p=0 "$VFILE" || echo "aac")
           A_SR=$(ffprobe -v error -select_streams a:0 -show_entries stream=sample_rate -of csv=p=0 "$VFILE" || echo "48000")
           A_CH=$(ffprobe -v error -select_streams a:0 -show_entries stream=channels -of csv=p=0 "$VFILE" || echo "2")
-
           case "$V_CODEC" in
             h264) VLIB=libx264 ;;
             hevc|h265) VLIB=libx265; V_CODEC=hevc ;;
             *) VLIB=libx264; V_CODEC=h264 ;;
           esac
           case "$A_CODEC" in
-            aac) ALIB=aac ;;
-            mp3) ALIB=libmp3lame ;;
-            opus) ALIB=libopus ;;
-            *) ALIB=aac; A_CODEC=aac ;;
+            aac) ALIB=aac ;; mp3) ALIB=libmp3lame ;; opus) ALIB=libopus ;; *) ALIB=aac; A_CODEC=aac ;;
           esac
-
           echo "vlib=$VLIB"      >> $GITHUB_OUTPUT
           echo "width=$WIDTH"    >> $GITHUB_OUTPUT
           echo "height=$HEIGHT"  >> $GITHUB_OUTPUT
@@ -107,7 +137,7 @@ jobs:
             -r "$FPSR" -c:v "$VLIB" -pix_fmt yuv420p -c:a "$ALIB" -ar "$ASR" -ac "$ACH" intro_t.mp4
 
           ffmpeg -hide_banner -loglevel error -y -i "in/outro" \
-            -vf "scale=${WIDTH}:${HEIGHT}:force_original_aspect_ratio=decrease,pad=${WIDTH}:${HEIGHT}:(ow-ih)/2:(oh-ih)/2" \
+            -vf "scale=${WIDTH}:${HEIGHT}:force_original_aspect_ratio=decrease,pad=${WIDTH}:${HEIGHT}:(ow-iw)/2:(oh-ih)/2" \
             -r "$FPSR" -c:v "$VLIB" -pix_fmt yuv420p -c:a "$ALIB" -ar "$ASR" -ac "$ACH" outro_t.mp4
 
       - name: Concat (try -c copy, fallback reencode)
@@ -123,7 +153,7 @@ jobs:
               -c:v libx264 -preset veryfast -crf 20 -c:a aac -b:a 128k out.mp4
           fi
 
-      - name: Upload output to destination folder by ID
+      - name: Upload output to destination folder by ID (256MiB chunks + backoff + repin)
         shell: bash
         env:
           RCLONE_CONFIG: ${{ github.workspace }}/rclone.conf
@@ -131,11 +161,68 @@ jobs:
         run: |
           set -e
           OUT="${{ inputs.output_basename }}.mp4"
+
+          # Config anclado a carpeta destino si hay ID (Shared Drive recomendado)
+          CONF="$RCLONE_CONFIG"
           if [ -n "$DST_ID" ]; then
             cp "$RCLONE_CONFIG" rclone.dst.conf
             echo "root_folder_id = $DST_ID" >> rclone.dst.conf
-            RCLONE_CONFIG=$(pwd)/rclone.dst.conf rclone copyto out.mp4 "gdrive:${OUT}" --log-level ERROR
-          else
-            rclone copyto out.mp4 "gdrive:${OUT}" --log-level ERROR
+            CONF="$(pwd)/rclone.dst.conf"
           fi
-          echo "Uploaded: ${OUT}"
+
+          FLAGS="--drive-chunk-size 512M \
+                 --transfers 1 --checkers 4 \
+                 --tpslimit 2 --tpslimit-burst 2 \
+                 --retries 7 --retries-sleep 20s --low-level-retries 50 \
+                 --user-agent rclone-gha/1.0"
+
+          try_upload () {
+            set +e
+            LOG=$(mktemp)
+            RCLONE_CONFIG="$CONF" rclone copyto out.mp4 "gdrive:${OUT}" --log-level ERROR $FLAGS 2>"$LOG"
+            RC=$?
+            set -e
+            echo "rclone exit: $RC"
+            if [ $RC -ne 0 ]; then
+              echo "----- rclone stderr (tail) -----"
+              tail -n 50 "$LOG" || true
+              echo "--------------------------------"
+              if grep -q "HTTP response code 429" "$LOG"; then
+                return 429
+              fi
+              return $RC
+            fi
+            return 0
+          }
+
+          # hasta 6 intentos: si 429, repinnea hosts a otra IP y backoff creciente
+          for i in $(seq 1 6); do
+            echo "Upload attempt $i ..."
+            if try_upload; then
+              echo "Uploaded: ${OUT}"
+              exit 0
+            fi
+            ERR=$?
+            if [ "$ERR" = "429" ]; then
+              echo "429 detected, rotating host pins for googleapis..."
+              # repinnea ambos hosts con otra IP aleatoria
+              for host in www.googleapis.com oauth2.googleapis.com; do
+                sudo sed -i.bak "/[[:space:]]$host$/d" /etc/hosts
+                IP=$(for s in 1.1.1.1 9.9.9.9 8.8.8.8; do dig +short A "$host" @"$s"; done | sort -u | shuf -n1)
+                if [ -n "$IP" ]; then
+                  echo "$IP $host" | sudo tee -a /etc/hosts >/dev/null
+                  echo "Pinned $host -> $IP"
+                fi
+              done
+              S=$((i*30))
+              echo "Sleeping ${S}s before retry..."
+              sleep $S
+              continue
+            else
+              echo "Non-429 error ($ERR). Aborting."
+              exit $ERR
+            fi
+          done
+
+          echo "Upload failed after retries."
+          exit 1
