--- a/.github/workflows/stitch.yml
+++ b/.github/workflows/stitch.yml
@@ -1,4 +1,4 @@
-name: Stitch video from Google Drive (by IDs, 1080p YouTube-like)
+name: Stitch video from Google Drive (by IDs, 256MiB + DNS/hosts)
 
 on:
   workflow_dispatch:
@@ -15,12 +15,6 @@ on:
       output_basename:
         description: "Nombre base de salida (sin .mp4)"
         default: "salida"
-      video_bitrate_k:
-        description: "Bitrate de video en kbps (auto|numero). Auto: 5500 (<=30fps) / 8000 (>30fps)"
-        default: "auto"
-      audio_bitrate_k:
-        description: "Bitrate de audio en kbps"
-        default: "128"
 
 jobs:
   stitch:
@@ -57,6 +51,7 @@ jobs:
           PIN_HOSTS: "true"   # cambia a "false" si no quieres tocar /etc/hosts
         run: |
           set -e
+          # Forzar resolv.conf con DNS conocidos (sin comillas dentro del EOF para evitar expansiones)
           sudo tee /etc/resolv.conf >/dev/null <<'EOF'
           nameserver 1.1.1.1
           nameserver 9.9.9.9
@@ -101,7 +96,7 @@ jobs:
           V_CODEC=$(ffprobe -v error -select_streams v:0 -show_entries stream=codec_name -of csv=p=0 "$VFILE")
           WIDTH=$(ffprobe -v error -select_streams v:0 -show_entries stream=width -of csv=p=0 "$VFILE")
           HEIGHT=$(ffprobe -v error -select_streams v:0 -show_entries stream=height -of csv=p=0 "$VFILE")
-          FPS_R=$(ffprobe -v error -select_streams v:0 -show_entries stream=avg_frame_rate -of csv=p=0 "$VFILE")
+          FPS_R=$(ffprobe -v error -select_streams v:0 -show_entries stream=r_frame_rate -of csv=p=0 "$VFILE")
           A_CODEC=$(ffprobe -v error -select_streams a:0 -show_entries stream=codec_name -of csv=p=0 "$VFILE" || echo "aac")
           A_SR=$(ffprobe -v error -select_streams a:0 -show_entries stream=sample_rate -of csv=p=0 "$VFILE" || echo "48000")
           A_CH=$(ffprobe -v error -select_streams a:0 -show_entries stream=channels -of csv=p=0 "$VFILE" || echo "2")
@@ -141,69 +136,18 @@ jobs:
             -vf "scale=${WIDTH}:${HEIGHT}:force_original_aspect_ratio=decrease,pad=${WIDTH}:${HEIGHT}:(ow-iw)/2:(oh-ih)/2" \
             -r "$FPSR" -c:v "$VLIB" -pix_fmt yuv420p -c:a "$ALIB" -ar "$ASR" -ac "$ACH" outro_t.mp4
 
-      - name: Concat (try -c copy, fallback reencode) -> out_concat.mp4
+      - name: Concat (try -c copy, fallback reencode)
         shell: bash
         run: |
           set -e
           printf "file 'intro_t.mp4'\nfile 'in/input'\nfile 'outro_t.mp4'\n" > list.txt
-          if ffmpeg -hide_banner -loglevel error -f concat -safe 0 -i list.txt -c copy out_concat.mp4; then
-            echo "Concat copy OK"
+          if ffmpeg -hide_banner -loglevel error -f concat -safe 0 -i list.txt -c copy out.mp4; then
+            echo "Concat with -c copy OK"
           else
-            echo "Concat recode fallback"
+            echo "Param mismatch; reencoding all"
             ffmpeg -hide_banner -loglevel error -f concat -safe 0 -i list.txt \
-              -c:v libx264 -preset veryfast -crf 20 -c:a aac -b:a 128k out_concat.mp4
+              -c:v libx264 -preset veryfast -crf 20 -c:a aac -b:a 128k out.mp4
           fi
-
-      - name: Compress to 1080p YouTube-like (2-pass) -> out.mp4
-        shell: bash
-        env:
-          VBIT_IN: ${{ inputs.video_bitrate_k }}
-          ABIT: ${{ inputs.audio_bitrate_k }}
-        run: |
-          set -e
-          SRC="out_concat.mp4"
-          OUT="${{ inputs.output_basename }}.mp4"
-
-          # fps numérico (redondeado)
-          FPS=$(ffprobe -v error -select_streams v:0 -show_entries stream=avg_frame_rate -of csv=p=0 "$SRC" \
-                | awk -F/ '{ if ($2==""||$2==0) print int($1+0.5); else printf "%.0f", $1/$2 }')
-          [ -z "$FPS" ] && FPS=30
-
-          # bitrate de video "estilo YT" por defecto (kbps): 1080p 30fps ~5.5Mbps, >30fps ~8Mbps
-          if [ "$VBIT_IN" = "auto" ] || [ -z "$VBIT_IN" ]; then
-            if [ "$FPS" -le 30 ]; then VBIT=5500; else VBIT=8000; fi
-          else
-            VBIT="$VBIT_IN"
-          fi
-
-          # GOP ≈ 2s
-          GOP=$((FPS*2))
-          # maxrate 1.45x y bufsize 3x (kbps)
-          MAXK=$(( VBIT * 145 / 100 ))
-          BUFK=$(( VBIT * 300 / 100 ))
-
-          echo "Encoding 1080p H.264 High@4.2 2-pass: fps=${FPS}, gop=${GOP}, vbit=${VBIT}k, max=${MAXK}k, buf=${BUFK}k, aac=${ABIT}k"
-
-          # PASO 1 (solo video)
-          ffmpeg -hide_banner -loglevel error -y -i "$SRC" \
-            -vf "scale=1920:1080:force_original_aspect_ratio=decrease,pad=1920:1080:(ow-iw)/2:(oh-ih)/2" \
-            -c:v libx264 -preset slow -profile:v high -level 4.2 -pix_fmt yuv420p \
-            -b:v ${VBIT}k -maxrate ${MAXK}k -bufsize ${BUFK}k \
-            -g ${GOP} -keyint_min ${GOP} -sc_threshold 0 -bf 2 \
-            -x264-params "aud=1:ref=3:deblock=1,1:me=umh:subme=6:rc-lookahead=40" \
-            -an -f mp4 /dev/null
-
-          # PASO 2 (video + audio)
-          ffmpeg -hide_banner -loglevel error -y -i "$SRC" \
-            -vf "scale=1920:1080:force_original_aspect_ratio=decrease,pad=1920:1080:(ow-iw)/2:(oh-ih)/2" \
-            -c:v libx264 -preset slow -profile:v high -level 4.2 -pix_fmt yuv420p \
-            -b:v ${VBIT}k -maxrate ${MAXK}k -bufsize ${BUFK}k \
-            -g ${GOP} -keyint_min ${GOP} -sc_threshold 0 -bf 2 \
-            -x264-params "aud=1:ref=3:deblock=1,1:me=umh:subme=6:rc-lookahead=40" \
-            -c:a aac -b:a ${ABIT}k -ar 48000 -ac 2 \
-            -movflags +faststart -tag:v avc1 "$OUT"
-
-          rm -f ffmpeg2pass*.log
 
       - name: Upload output to destination folder by ID (256MiB chunks + backoff)
         shell: bash
@@ -221,7 +165,7 @@ jobs:
             CONF="$(pwd)/rclone.dst.conf"
           fi
 
-          FLAGS="--drive-chunk-size 512M \
+          FLAGS="--drive-chunk-size 256M \
                  --transfers 1 --checkers 4 \
                  --tpslimit 2 --tpslimit-burst 2 \
                  --retries 7 --retries-sleep 20s --low-level-retries 50 \
@@ -230,7 +174,7 @@ jobs:
           try_upload () {
             set +e
             LOG=$(mktemp)
-            RCLONE_CONFIG="$CONF" rclone copyto "$OUT" "gdrive:${OUT}" --log-level ERROR $FLAGS 2>"$LOG"
+            RCLONE_CONFIG="$CONF" rclone copyto out.mp4 "gdrive:${OUT}" --log-level ERROR $FLAGS 2>"$LOG"
             RC=$?
             set -e
             echo "rclone exit: $RC"
